--- a/groups/gtCoprime.tex
+++ b/groups/gtCoprime.tex
@@ -1120,3 +1120,11 @@ of $A$ on $G$ is coprime then $\bigcap_{K \in {\cal K}} C_A(K)/C_G(A) = O_p(A/C_
 \begin{quote}
 \emph{Proof:}  See Stellmacher, p 188.
 \end{quote}
+{\bf Theorem 60:}  (a) If $G/Phi(G)$ is cyclic, $G$ is cyclic. (b) If $P$ is a $p$-group, $P/Phi(P)$ is elementary abelian.
+\begin{quote}
+\emph{Proof:} 
+\end{quote}
+{\bf Theorem 61:}  If $\psi$ is a $p'$-automorphism of a $p$-gorup, $P$, which induces the identity on $P/\Phi(P)$ then $\psi = 1$.
+\begin{quote}
+\emph{Proof:} 
+\end{quote}
