--- a/groups/gtCoprime.tex
+++ b/groups/gtCoprime.tex
@@ -75,7 +75,7 @@ $\theta([x,a]) =0$, so $[P,A] \subseteq ker(\theta)$.  This shows $C_P(A) \cap [
 and the result follows from the earliler result that $P= [P,A] C_P(A)$.
 \end{quote}
 {\bf Theorem 6:}
-If $\phi$ is a $p'$-automorphism of a $p$-group, $P$ which induces the identity on
+If $\phi$ is a $p'$-automorphism of a $p$-group, $P$, which induces the identity on
 $P/ \Phi(P)$ then $\phi= 1$.
 \begin{quote}
 \emph{Proof:}  
@@ -1121,10 +1121,6 @@ of $A$ on $G$ is coprime then $\bigcap_{K \in {\cal K}} C_A(K)/C_G(A) = O_p(A/C_
 \emph{Proof:}  See Stellmacher, p 188.
 \end{quote}
 {\bf Theorem 60:}  (a) If $G/Phi(G)$ is cyclic, $G$ is cyclic. (b) If $P$ is a $p$-group, $P/Phi(P)$ is elementary abelian.
-\begin{quote}
-\emph{Proof:} 
-\end{quote}
-{\bf Theorem 61:}  If $\psi$ is a $p'$-automorphism of a $p$-gorup, $P$, which induces the identity on $P/\Phi(P)$ then $\psi = 1$.
 \begin{quote}
 \emph{Proof:} 
 \end{quote}
