typo on sums of squarres proof

--- a/science/math1.tex
+++ b/science/math1.tex
@@ -96,7 +96,7 @@ $(ua+vb)^2 + (va-ub)^2 = (u^2+v^2)(a^2+b^2)$.  Now apply Fermat's descent,
 suppose $a^2+b^2=mp$.  Choose $u=a \jmod{m}, v=b \jmod{m}, -{\frac m 2} \le u,v \le {\frac m 2}$
 then $a^2+b^2=u^2+v^2= 0 \jmod{m}$.  $u^2+v^2= mr$ and
 $(ua+vb)^2 + (va-ub)^2= m^2 rp$. $m \mid (ua+vb)$ and $m \mid (va-ub)$ so
-$({\frac {ua+vb} {m}})^2 + ({\frac {va-ub} {m}})^2 =rp, r<p$.
+$({\frac {ua+vb} {m}})^2 + ({\frac {va-ub} {m}})^2 =rp, r<m$.
 If $a$ has $A$ divisors $a_1 , \ldots , a_A$ with $a_i = 1 \jmod{4}$
 and $B$ divisors $b_1 , \ldots , b_B$ with $b_i = 3 \jmod{4}$ then
 $x^2 + y^2 =n$ has $4(A-B)$ solutions in the integers.
