--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 This directory contains a variety of class notes I devloped over the years
-including labs, code an tutorials.
+including labs, code and tutorials.
 
 John Manferdelli
 johnmanferdelli@hotmail.com
