--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-This directory contains a variety of class notes I devloped over the years
+This directory contains a variety of class notes I developed over the years
 including labs, code and tutorials.
 
 John Manferdelli
