fixed some constants

--- a/science/physics.tex
+++ b/science/physics.tex
@@ -730,10 +730,11 @@ Dry (static, sliding) Friction:  Steel (.78,.42), Teflon; (.04,-).\\
 $\alpha_{l} = l^{-1} {\frac {\partial l} {\partial t}} \times 10^{6}$,
 C: (Al, 24), (Cu, 17), (Granite, 8.3), (Ice, 50), (Fe, 12), (Water, 207).\\
 \emph{Heat Capacity:}
-$c_{v} =  m^{-1} {\frac {\partial Q } {\partial T}}:$
+$c_{v} =  m^{-1} {\frac {\partial Q } {\partial T}}:$ [${\frac {J}{mol-\thinspace^oK}}$]
 (He, 12.5), ($O_{2}$, 21.1), ($N_{2}$, 20.6),
 ($C_{2}H_{6}$ , 39.3), MFP $N_{2}= 10^{-5}$ cm,
 $C_{v,solid} = 3 R$.\\
+$c_{v,air} \approx 700 {\frac {J} {kg-\thinspace^oK}}$.
 \emph{Melting/Boiling:}
 MP/BP (K): Au, 1336, 3081; $O_{2}$, 54, 90; Cu, 1356, 2839.\\
 \emph{Heat Conduction:}
