--- a/science/physics.tex
+++ b/science/physics.tex
@@ -757,7 +757,8 @@ Cu, 140; Fe, 100; Water, 2.2 ($GPa$).  \\
 $Y= {\frac {\frac {\Delta F}{A}} {\frac {\Delta l}{l}}} \times
 10^{12} dy/cm^{2}$: Al, 70; Cu, 110; Fe, 190.  \\
 $M_{s} = {\frac {\frac {\Delta F} {A}} {\frac {\Delta x} {l}}}:$
-Al, 30; Cu, 42; Fe, 100.
+Al, 30; Cu, 42; Fe, 100.\\
+Energy content of one gallon of heating oil: $140,000 kJ/gallon$.
 \\
 \\
 {\bf Air:} 28.96 m-w, $c_{p}$ = 1005 J/kg-K, $c_{v} = 718 J/kg-K$.
