--- a/science/math2.tex
+++ b/science/math2.tex
@@ -2021,8 +2021,8 @@ L^{-1}AL =
 1 & 0 & 0\\
 0  & 0 & 1\\
 \end{array}
-\right)
-$$.
+\right).
+$$
 Since $m_T(x)$ has linear factors, the Jordan canonical form is diagonal and
 $$
 J =
