--- a/science/math2.tex
+++ b/science/math2.tex
@@ -1947,12 +1947,12 @@ $$.
 Define $\psi: N \rightarrow V_T$ by $\psi(e_i)=v_i$.  
 We show $ker(\psi)=E$. 
 Let $z_i = \sum_{j=1}^n a_{ji}e_j =xe_i$ then $E= \langle z_i \rangle$.
-$psi(z_i) = \sum_{j=1}^n a{j,i}v_j - T(v_i)= 0$ so $E \subseteq ker(\psi)$.
+$\psi(z_i) = \sum_{j=1}^n a{j,i}v_j - T(v_i)= 0$ so $E \subseteq ker(\psi)$.
 Let $W = \langle e_i + E \rangle$, $1 \leq i \leq n$.  $x e_i + xE \in W$ so $W$ is a submodule of $N/E$.
 Since $N= R \langle e-1 , e_2 , \ldots , e_n \rangle$, $W= N/E$.  If $u \in N$, $u = \sum_i c_i e_i + z$, $c_i \in F, x \in E$.
 $\psi(u)=  \sum_i c_i \psi(e_i) + \psi(z) = \sum_i c_i v_i$ and so $u \in ker(\psi)$ iff $c_i =0$ so $u \in E$.
 \end{quote}
-{\bf Example:} $F = \mathbb{Q}$ and $T$ us represented over the standard basis as
+{\bf Example:} $F = \mathbb{Q}$ and $T$ is represented over the standard basis as
 $$
 A =
 \left(
@@ -2034,7 +2034,7 @@ J =
 \end{array}
 \right)
 $$
-{\bf One more example:} $F = \mathbb{Q}$ and $T$ us represented over the standard basis as
+{\bf One more example:} $F = \mathbb{Q}$ and $T$ is represented over the standard basis as
 $$
 A =
 \left(
@@ -2047,27 +2047,24 @@ $$  The RCF for $A$, by inspection is
 $$
 \left(
 \begin{array}{cc}
-x - \lambda_1 & 0\\
+1 & 0\\
 0 & (x - \lambda_1) (x - \lambda_2)\\
 \end{array}
 \right)
 $$
-and $m_T(X)= x^2 -(\lambda_1 + \lambda_2) x + \lambda_1 \lambda_2)$.  Further,
+and $m_T(X)= x^2 -(\lambda_1 + \lambda_2) x + \lambda_1 \lambda_2)$ is the minimal polynomial.  Further,
 $$
 A-xI = 
 \left(
 \begin{array}{cc}
-x - \lambda_1 & 0\\
-0 & x - \lambda_2\\
+\lambda_1  - x& 0\\
+0 & \lambda_2 - x\\
 \end{array}
-\right)
-$$
-and
-$$
+\right), \;
 P(A-xI)Q = 
 \left(
 \begin{array}{cc}
-x - \lambda_1 & 0\\
+1 & 0\\
 0 & (x - \lambda_1) (x - \lambda_2)\\
 \end{array}
 \right), \;
@@ -2077,14 +2074,14 @@ P =
 1 & \lambda_1\\
 1 & \lambda_2\\
 \end{array}
-\right), \;
+\right)
 $$
-In RCF, the new basis are $f_1, f_2$ where
+In RCF, the new basis is $\langle f_1, f_2 \rangle$ where
 $$
 \left(
 \begin{array}{c}
 f_1 \\
-f_2\\
+f_2 \\
 \end{array}
 \right) =
 P^T
@@ -2112,7 +2109,7 @@ P^{-1} = {\frac 1 {\lambda_1 - \lambda_2}}
 \end{array}
 \right)
 $$
-then
+We see that
 $$
 P^{-1} A P =
 \left(
