--- a/science/math2.tex
+++ b/science/math2.tex
@@ -2043,16 +2043,8 @@ A =
 0 & \lambda_2 \\
 \end{array}
 \right).
-$$  The RCF for $A$, by inspection is 
 $$
-\left(
-\begin{array}{cc}
-1 & 0\\
-0 & (x - \lambda_1) (x - \lambda_2)\\
-\end{array}
-\right)
-$$
-and $m_T(X)= x^2 -(\lambda_1 + \lambda_2) x + \lambda_1 \lambda_2)$ is the minimal polynomial.  Further,
+$m_T(X)= x^2 -(\lambda_1 + \lambda_2) x + \lambda_1 \lambda_2)$ is the minimal polynomial.  Further,
 $$
 A-xI = 
 \left(
