--- a/science/math2.tex
+++ b/science/math2.tex
@@ -2002,7 +2002,7 @@ P^{-1} =
 \right)
 $$.
 In this example, $V_t \cong R w_1 \oplus Rw_2 \oplus Rw_3$ with $w_1= e_3$, $w_2=Tw_1 = (4,6,7)^T$,
-$w_3 = e2+2 e_3$ and so the basis change matrix is
+$w_3 = e_2+2 e_3$ and so the basis change matrix is
 $$
 L =
 \left(
