--- a/science/math2.tex
+++ b/science/math2.tex
@@ -1999,8 +1999,8 @@ P^{-1} =
 {\frac 3 2} & 1 & 0\\
 {\frac {7-x} 4}  & 2& 1\\
 \end{array}
-\right)
-$$.
+\right).
+$$
 In this example, $V_t \cong R w_1 \oplus Rw_2 \oplus Rw_3$ with $w_1= e_3$, $w_2=Tw_1 = (4,6,7)^T$,
 $w_3 = e_2+2 e_3$ and so the basis change matrix is
 $$
@@ -2044,7 +2044,7 @@ A =
 \end{array}
 \right).
 $$
-$m_T(X)= x^2 -(\lambda_1 + \lambda_2) x + \lambda_1 \lambda_2)$ is the minimal polynomial.  Further,
+$m_T(X)= x^2 -(\lambda_1 + \lambda_2) x + \lambda_1 \lambda_2$ is the minimal polynomial.  Further,
 $$
 A-xI = 
 \left(
