--- a/science/crypto.tex
+++ b/science/crypto.tex
@@ -4,7 +4,7 @@
 $H(X)= - \sum_{i=1}^n P(X=x_i) lg(P(X=x_i))$.
 What is the amount of information in a number $n: 0 \le n <2^m$?  
 Information learned about 
-$Y$ by observing $X$ is $I(Y; X)= H(Y) - H(Y|X)$.  Note $H(X|Y)= -\sum p_X(x) H(Y|X=x)$ which
+$Y$ by observing $X$ is $I(Y; X)= H(Y) - H(Y|X)$.  Note $H(Y|X)= -\sum p_X(x) H(Y|X=x)$ which
 is generally not equal to $\sum_{X, Y} p_Y(y|x) lg(p_Y(y|x))$.
 $H_E= lim_{N \rightarrow \infty} {\frac {H(P^n)} {n}}$.  $H(K|C)= H(M|C)+ H(K|M,C)$.
 \\
