--- a/science/math1.tex
+++ b/science/math1.tex
@@ -219,6 +219,10 @@ completes the proof of the second result.  If $n= p_1^{e_1} p_2^{e_2} \ldots p_t
 define $\mu(n)=0$, if $e_j > 1$ for any $j$, otherwise $\mu(n)= (-1)^t$.  $\mu$ is
 multiplicative and the result follows.
 \end{quote}
+{\bf Definition:} If $n = {p_1}^{\alpha_1} \cdot {p_2}^{\alpha_2} \cdot \ldots \cdot {p_k}^{\alpha_k}$, define
+$\mu(n) = (-1)^{\sum_{i=1}^k \alpha_i}$.
+\\
+\\
 {\bf Moebius Formula:} If $f(n)$ is multiplicative and 
 $F(n)=  \sum_{d \mid n} f(d)$ then
 $f(n)= \sum_{d \mid n} \mu(d) F({\frac {n} {d}})$;  if
