--- a/science/math4.tex
+++ b/science/math4.tex
@@ -1300,6 +1300,14 @@ $\Delta N=
 $ and each of these integrals is $0$.  Thus $\Delta N= 0$ and the theorem holds by
 the previous result.
 \end{quote}
+{\bf Definition:}  A complex function, $f(z)$, is \emph{holomorphic} if it is
+differentiable everywher on ${\mathbb C}$.
+A complex function, $f(z)$, has a \emph{removeable singularity} at
+$a$ if $f(a)$ is undefined but there is a choice $b=f(a)$ which makes $f$ holomorphic.
+A complex function, $f(z)$, has an \emph{essential singularity} at $a$ if $f(a)$ is neither
+a pole nor a removeable singularity.
+\\
+\\
 {\bf Theorem:}  
 An analytic function comes arbitrarily close to any value in ${\mathbb C}$ in every neighborhood of an
 essential singularity.
