--- a/science/math2.tex
+++ b/science/math2.tex
@@ -600,7 +600,7 @@ $\phi(y_1 , \ldots , y_n) \ne 0 \rightarrow \phi(\sigma_1 , \ldots , \sigma_n) \
 \end{quote}
 {\bf Theorem:} Let $\sigma_1, \ldots , \sigma_n$ be the symmetric functions on $n$ variables.
 $\varphi(\sigma_1 , \ldots , \sigma_n )=0 $ iff
-$\varphi(a1 , \ldots , x_n )=0 $.
+$\varphi(x_1 , \ldots , x_n )=0 $.
 \begin{quote}
 \emph{Proof:} 
 Proof by induction on $n$.  Trivial for $n=1$.  
