--- a/science/math4.tex
+++ b/science/math4.tex
@@ -1287,7 +1287,7 @@ Use the Cauchy integral formula.
 \begin{quote}
 \emph{Proof:}
 $f(b) - f(a) = {\frac {b-a} {2 \pi i}} \int_{B_r(a)} {\frac {f(z)} {(z-a)(z-b)}} dz$.
-So $|f(b) - f(a)| \leq {\frac {2(b-a) M} {r}}$; let $ \rightarrow \infty$.
+So $|f(b) - f(a)| \leq {\frac {2(b-a) M} {r}}$; let $r \rightarrow \infty$.
 \end{quote}
 {\bf Rouche's Theorem:} If $f(z), g(z)$ are analytic 
 in and on a simple closed curve $C$
