a few typos fixed in gt

--- a/groups/gtBasic.tex
+++ b/groups/gtBasic.tex
@@ -23,6 +23,14 @@ ${\cal SCN}(P)=$ set of self centralizing normal subgroups of $P$.
 ${\cal SCN}(p)= {\cal SCN}(P)$ where $P \in {\cal SCN}(P)$.
 \\
 \\
+{\bf Definition 4.5:} If $\pi = \{ p_1, p_2, \ldots , p_k\}$ is a set of primes, we say
+$G$ is a $\pi$ group if the only primes dividing $|G|$ are in $\pi$.  If $G$ is a finite
+group and $H \leq G$, we say $H$ is an $S_{\pi}$ group if $H$ is a $\pi$ group and 
+$p \nmid |G:H|$  if $p \in \pi$.  $S_{\pi}(G)$  is the set of all $S_{\pi}$ subgroups of
+$G$. For $\pi = \{ p \}$, we call an $S_{\pi}$ group and $S_p$ group and put $S_{\pi}(G) = S_p(G)$.
+$S_p(G)$ is just the sylow subgroups of $G$.
+\\
+\\
 {\bf Definition 5:}
 ${\cal N}_G(A, \pi)=$ set of all $A-$invariant $\pi$ subgroups of $G$.
 ${\cal N}_G^*(A, \pi)=$ maximal subgroups in ${\cal N}_G(A, \pi)$.  For a $p-$group, $P$,
@@ -40,7 +48,7 @@ $X^g \cap H = \{X\}$.\\
 {\bf Definition 7:}
 $G$ is $p$\emph{-constrained} if 
 $P \in S_p ( O_{p',p} (G))$ implies $C_G(P) \subseteq O_{p',p} (G)$.
-Equivalently, if $O_{p'}(G)=1$ then $C_G(P) \subseteq O_p(G)$.
+Equivalently, if $O_{p'}(G)=1$ then $C_G(O_p(G)) \subseteq O_p(G)$ and $F(G)= O_p(G)$..
 \\
 \\
 {\bf Definition 8:}
