--- a/groups/gtConstruct.tex
+++ b/groups/gtConstruct.tex
@@ -20,7 +20,7 @@ If $1 \rightarrow N \rightarrow_{i} G \rightarrow_{\varphi} Q \rightarrow 1$, th
 are equivalent
 (1) $\exists H \subseteq G$ such that $\varphi: H \rightarrow Q$ is an isomorphism;
 (2) $\exists s:Q \rightarrow G$ such that $\varphi \cdot s = id$;
-(3) $G$ is a semi-direct product of $N$ by $H$ written $N \rtimes Q$; in this
+(3) $G$ is a semi-direct product of $N$ by $H$ written $N \ltimes Q$; in this
 case, we say $G$ is a split extension of $N$ by $H$.
 \begin{quote}
 \emph{Proof:}
@@ -37,7 +37,7 @@ $x h^{-1} \in N$ and $x= nh$.
 \\
 \\
 $3 \rightarrow 1$:
-If $G= N \rtimes H$, the map $\varphi_{|H}$ is an isomorphism onto $Q$ and $H$ satisfies the
+If $G= N \ltimes H$, the map $\varphi_{|H}$ is an isomorphism onto $Q$ and $H$ satisfies the
 conditions of (1).
 \end{quote}
 \section {Presentations}
