--- a/groups/gtExtensions.tex
+++ b/groups/gtExtensions.tex
@@ -21,7 +21,8 @@ $s:G \rightarrow H$ such that $s(1)=1$ and $\phi(h) = N s(h)$, then
 $\exists f: H \times H \rightarrow N: s(h_1) s(h_2)= f(h_1, h_2) s(h_1 h_2)$
 and $f(h_1, h_2) f(h_1 h_2, h_3)= f(h_2, h_3)^{s(h_1)} f(h_1 , h_2 h_3)$.  Note
 that $\theta_h: n \mapsto s(h) n s(h)^{-1}$ is in $Aut(N)$ and
-$\theta_{h_1}(\theta_{h_2}(n))= \theta_{h_1 h_2}(n)^{f(h_1, h_2)}$.
+$\theta_{h_1}(\theta_{h_2}(n))= \theta_{h_1 h_2}(n)^{f(h_1, h_2)}$.  Note, here $a^b = b a b^{-1}$, usually,
+we write $a^b = b ^ {-1} a b$, oh well.
 \\
 \\
 {\bf Theorem:}
