--- a/groups/gtSolvable.tex
+++ b/groups/gtSolvable.tex
@@ -73,7 +73,7 @@ $c(x)= {\frac {-1} m} e(x)$ satisfies the desired properties.
 \\
 \emph{Proof of conjugacy:}
 Suppose $\overline{G}=G/N$ is solvable. Suppose $\pi$ is the set of primes 
-dividing and $m=|G:N|$. Let $H,K \le G$ with $|H|=|K|=m$.  
+dividing $|N|$ and $m=|G:N|$. Let $H,K \le G$ with $|H|=|K|=m$.  
 Set $R=O_{\pi}(G)$ so that $O_{\pi}(G/R) = 1$.  
 Let $L/N$ be a minimal
 normal subgroup of $G/N$.
@@ -272,7 +272,7 @@ but $[xy, A] \subseteq A \cap X$ so $xy \in C_X(A)$ and we're done.
 {\bf Theorem 5:}
 Suppose $V$ is a non-cyclic abelian group $r$-group of operators on a $p$-constrained
 group $X$.  For $r \ne p$ both prime, 
-$\bigcap_{v \in V^{\#}} O_{p'}(C_X(V)) \subseteq O_{p'}(X)$.
+$\bigcap_{v \in V^{\#}} O_{p'}(C_X(v)) \subseteq O_{p'}(X)$.
 \begin{quote}
 \emph{Proof:}
 Put ${\overline X}= X/O_{p'}(X)$, $V$-invariant.
