--- a/groups/gtConstruct.tex
+++ b/groups/gtConstruct.tex
@@ -6,7 +6,7 @@ there is a surjective homomorphism $\pi:G \rightarrow Q$.
 \\
 \\
 {\bf Definition 1:} 
-Let $\pi: A \rightarrow Aut(A)$, $K \lhd G$, $H<G$ and $H \cap K = 1$ define the
+Let $\pi: A \rightarrow Aut(K)$, $K \lhd G$, $H<G$ and $H \cap K = 1$ define the
 \emph {semi-direct} product of $K$ by $H$ as the group who's elements
 are $(a,b) \in H \times K$ with the product $(a, g) \cdot (b,h)= (ab, \pi(b)(g)h)$.
 \\
