Another small fix

--- a/groups/gtBasic.tex
+++ b/groups/gtBasic.tex
@@ -231,4 +231,9 @@ Thus $H^{\phi} = H$, $H \; char \; G$, so $G=H$.
 \end{quote}
 {\bf Corrollary:} If $G$ is solvable and $H \le G$ is characteristically simple, $H$
 is an elementary abelian $p$-group.
+\\
+\\
+{\bf Definition 23:} A group, $A$ acts on a set, $\Omega$, if $\forall x \in \Omega$ and $\forall a \in A$,
+$x^a \in \Omega$, $x^e = x$, $x^{(a_1 a_2)} = (x^{a_1})^{a_2}$. If, in addition, $\Omega = G$ is a group and
+$g_1 , g_2 \in G$, then $(g_1 g_2)^a = g_1^a g_2^a$.
 
