--- a/science/math2.tex
+++ b/science/math2.tex
@@ -1836,7 +1836,7 @@ U & 0 & 0 \\
 $$
 where
 $U$ and $D$ are diagonal matricies 
-$U = diag(u_1 , u_2 , \ldots , u_x \rangle$ with $u_i$ a unit and
+$U = diag(u_1 , u_2 , \ldots , u_s \rangle$ with $u_i$ a unit and
 $D = diag(d_1 , d_2 , \ldots , d_k \rangle$ with $d_i \in R$ and $d_j \mid d_{j+1}$.  Then $N/E$ is a direct sum of cyclic modules over
 $R$, $N/E = \bigoplus_{i=s+1}^m R \langle y_i + E \rangle$, with invariant factors $d_1, d_2, \ldots, d_s$.  $N/E$ has rank $m-s-k$ and
 $dim(E)=s+k$.
