--- a/science/math5.tex
+++ b/science/math5.tex
@@ -959,6 +959,7 @@ $T_3= \{ 4,10,16,17 \}$,
 $T_4= \{ 5,6,9,19 \}$,
 $T_5= \{ 8, 14,18,20 \}$,
 $B= \{ T_0, T_1, T_2, T_3, T_4, T_5 \}$.
+In a lattice (or subset of a lattice) ${\cal L}$, ${\cal L}(x) = \{ y \in {\cal L}: (x,y) = 0 \}$.
 \\
 \\
 {\bf Theorem:}
