--- a/science/math5.tex
+++ b/science/math5.tex
@@ -846,13 +846,13 @@ Hence the contact number is $98256$ (lattice point with even parity) + $98304$
 (lattice point with odd parity) $= 196,560$;  
 the density is $.001929$.  Each pair of adjacent lattice points is adjacent to $4600$
 others. \emph{Example:} $(4,4, 0, \ldots, 0)$
-is adjacent to $(4,0, \ldots , 0)$ - there are $88$ of these,
-$(2,2, \ldots , 0)$ - there are $77 \times 2^7$ of these and
-$(1,3, \ldots , 0)$ - there are $2048$ of these.
+is adjacent to $(4, 0, 4, \ldots , 0)$ - there are $88$ of these,
+$(2,2,2,2,2,2,2,2,0, \ldots , 0)$ is adjacent to $(2,2,2,2,2,2,2,0,2, 0,, \ldots , 0)$
+- there are $77 \times 2^7$ of these and
+$(1,3,1, \ldots , 1)$ is adjacent to $(3,1,1, \ldots , 1)$ - there are $2048$ of these.
 For the first Leech packing,
 the density is ${\frac {2^{24}} { 2 \times 2^{12}}}= 2^{-11}$, 
-first factor of $2$ in 
-denominator is from condition that the sum of the
+first factor of $2$ in denominator is from condition that the sum of the
 coordinates $= 0 \jmod{4}$ and so the packing density is $.0009647$.  The
 Leech lattice doubles this which is about $.8$ of the Rogers bound.
 \\
