--- a/science/math5.tex
+++ b/science/math5.tex
@@ -849,7 +849,7 @@ others. \emph{Example:} $(4,4, 0, \ldots, 0)$
 is adjacent to $(4, 0, 4, \ldots , 0)$ - there are $88$ of these,
 $(2,2,2,2,2,2,2,2,0, \ldots , 0)$ is adjacent to $(2,2,2,2,2,2,2,0,2, 0,, \ldots , 0)$
 - there are $77 \times 2^7$ of these and
-$(1,3,1, \ldots , 1)$ is adjacent to $(3,1,1, \ldots , 1)$ - there are $2048$ of these.
+$(1,3,1, \ldots , 1)$ is adjacent to $(-3,-1,1, \ldots , 1)$ - there are $2048$ of these.
 For the first Leech packing,
 the density is ${\frac {2^{24}} { 2 \times 2^{12}}}= 2^{-11}$, 
 first factor of $2$ in denominator is from condition that the sum of the
