--- a/science/math5.tex
+++ b/science/math5.tex
@@ -1124,7 +1124,7 @@ $.1$ acts primitively on ${\overline {\Lambda_2}}$.
 \begin{quote}
 \emph{Proof:} 
 Each element of $.1$ permutes $98280$ diameters.  Since $.O$ is transitive on
-$\Lambda_2$, $.1$ is transitive for diameters.  Suppose
+$\Lambda_2$, $.1$ is transitive on diameters.  Suppose
 $.1$ is imprimitive.  $|S_1| \mid 98280$.  Let ${\overline x} \in S_1$.
 Since $|S_1| \ge 1, \exists y \in S_1$ whose orbit under $.1_{\overline x}$
 has order $4600, 47104, 46575$.  Since $.1$ fixes ${\overline x}$,
