--- a/science/math5.tex
+++ b/science/math5.tex
@@ -1146,7 +1146,7 @@ equal size.
 (2) $N$ is not normal in $.0$.  This is proved by looking at $B$, the $4$-subsets defined above.
 (3) $H=N$.  $|H:H_x|= 13 \cdot 7560$.  Let $P \in S_{13}$.  Since $H$ is normal, all the sylow $13$
 subgroups of $.O$ are in $H$ so
-$|>O:N_{.O}(P)= |ccl_{.O}(P)|=
+$|O:N_{.O}(P)| = |ccl_{.O}(P)|=
 |ccl_{H}(P)|= |H:N_H(P)|$ and $|.O:H|= |N_{.O}(P):N_H(P)|$ with $N_H(P)= N_{,O}(P) \cap H$.
 Thus $|.O|= |N_{.O}(P)H|= {\frac
 {|N_{.O}(P)| \cdot |H|}
