--- a/groups/gtSpecific.tex
+++ b/groups/gtSpecific.tex
@@ -984,6 +984,13 @@ Apply Iwasawa's theorem given that if $G= PSU_n(q)$, $G'=G$,
 $G$ acts primitively on isotropic lines and $H \lhd G_u$, where $H$ is the unitary
 transvections fixing $u$ and $ \langle H^G \rangle = G$.
 \end{quote}
+{\bf Definition:}  $G$ is quaternion if $|G|=8$ and has a single involution.   If $x \in G$ and $x$ is neither
+the identity nor the involution, $|x|=8$.  A generalized quaternion group is a group
+$G= \langle a, b: a^{2^k}=-1, b^2 = -1, b^{-1} a b = a^{-1} \rangle$.
+The 2 sylow subgroup of $SL_2(5)$ is quaternion and the 2 sylow subgroups of $SL_2(q), q$, odd are generalized quaternion.
+The 2 sylow subgroups of $SL_2(2^k)$ are elementary abelian.
+\\
+\\
 {\bf Theorem 39:} Let $V= A_n(F)$.  $GL(V)/SL(V) \cong K^*$.  
 If $t \in Inv(SL(V)), v + v^t \in C_V(t)$.
 All $p$-elements of $GL_2(V)$ are in $SL_2(V)$.  There are $q+1$ sylow $p$-subgroups in
